[package]
name = "oswalt"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
